--- a/nifty/visualization/quotes.css
+++ b/nifty/visualization/quotes.css
@@ -1,3 +1,5 @@
+/*@import "bootstrap.css";*/
+
 /*@font-face {
 	font-family: "League Gothic";
 	src: url("League_Gothic-webfont.woff") format("woff");
@@ -13,11 +15,13 @@
 }*/
 
 html, body {
-  font-family: HelveticaNeue, 'Helvetica Neue', Helvetica, Arial, sans-serif;
+  font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
   margin: 0 auto;
   padding: 0;
-  font-size: 0.9em;
-  color: black;
+  /*font-size: 0.9em;*/
+  font-size: 100%;
+  color: #333333;
+  /*color: black;*/
 }
 
 .warning {
@@ -89,7 +93,66 @@ a.selected {
   filter: sepia(1);
 }
 
+table {
+  max-width: 100%;
+  background-color: transparent;
+  border-collapse: collapse;
+  border-spacing: 0;
+}
 
+.table {
+  width: 100%;
+  margin-bottom: 18px;
+}
+
+.table th,
+.table td {
+  padding: 8px;
+  line-height: 18px;
+  text-align: left;
+  vertical-align: top;
+  border-top: 1px solid #dddddd;
+}
+
+.table th {
+  font-weight: bold;
+}
+
+.table thead th {
+  vertical-align: bottom;
+}
+
+.table caption + thead tr:first-child th,
+.table caption + thead tr:first-child td,
+.table colgroup + thead tr:first-child th,
+.table colgroup + thead tr:first-child td,
+.table thead:first-child tr:first-child th,
+.table thead:first-child tr:first-child td {
+  border-top: 0;
+}
+
+.table tbody + tbody {
+  border-top: 2px solid #dddddd;
+}
+
+.table-condensed th,
+.table-condensed td {
+  padding: 4px 5px;
+}
+
+.table-striped tbody tr:nth-child(odd) td,
+.table-striped tbody tr:nth-child(odd) th {
+  background-color: #f9f9f9;
+}
+
+.table tbody tr:hover td,
+.table tbody tr:hover th {
+  background-color: #f5f5f5;
+}
+
+.table tbody tr.hidden {
+  display: none;
+}
 
 .stream {
   margin: 10px auto 10px auto;
@@ -385,6 +448,11 @@ background: radial-gradient(center, ellipse cover,  #555555 0%,#dddddd 100%); /*
   font-size:10px;
   font-family:Verdana, Geneva, Arial, Helvetica, sans-serif;
   padding:7px;
+}
+
+.stream-table {
+    text-align: center;
+    margin: 50px 0;
 }
 
 .footer {
