some sugar :] (aka sorting...why not?) waiting on sandy's library commit and then we can start running on forever woot

--- a/nifty/resources/output/web/webresources/css/quotes.css
+++ b/nifty/resources/output/web/webresources/css/quotes.css
@@ -45,3 +45,12 @@ a:hover {
   color: #005580;
   text-decoration: underline;
 }
+
+#heading {
+	text-decoration: underline;
+}
+
+td.selected {
+	text-transform:uppercase;
+	color: #FF0066;
+}
